# fractals

./: CLAUDE.md  Cargo.toml  README.md  TODO.md  fractal-coloring-spec.md
.claude/memory/: changelog.md
src/: app.rs  export.rs  fractals.rs  gpu.rs  main.rs  nebula.rs
src/shaders/: colorize.wgsl  escape.wgsl  escape_perturb.wgsl  finalize.wgsl  median_finalize.wgsl  nebula_finalize.wgsl  nebula_sample.wgsl  newton.wgsl
