[package]
name = "fractals"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
egui = "0.31"
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
env_logger = "0.11"
log = "0.4"
rug = "1"

[profile.release]
opt-level = 3
lto = "thin"
